[package]

name = "tessel"
version = "0.1.0"
authors = [
	"Kenneth Nierenhausen <kennethnierenhausen@gmail.com>",
	"Chris Lewis <cflewis@google.com>"
]
description = "Runtime library for the Tessel microcontroller."
license = "MIT"

[[bin]]
name = "hello-rust"
doc = false

[dependencies]
unix_socket = "0.5.0"

[dev-dependencies]
tempfile = "2.1.4"
