[package]

name = "tessel"
version = "0.2.0"
authors = [
	"Chris Lewis <cflewis@google.com>",
	"Jon McKay <jon@tessel.io>",
	"Kenneth Nierenhausen <kennethnierenhausen@gmail.com>",
	"Tim Ryan <tim@tessel.io>",
]
description = "Runtime library for the Tessel microcontroller."
license = "MIT"

[[bin]]
name = "hello-rust"
doc = false

[dependencies]
unix_socket = "0.5.0"

[dev-dependencies]
tempfile = "2.1.4"
