[package]

name = "tessel"
version = "0.3.1"
authors = [
	"Chris Lewis <cflewis@google.com>",
	"Jon McKay <jon@tessel.io>",
	"Kenneth Nierenhausen <kennethnierenhausen@gmail.com>",
	"Tim Ryan <tim@tessel.io>",
]
description = "Runtime library for the Tessel microcontroller."
license = "MIT"

[[bin]]
name = "hello-rust"
doc = false

[dependencies]
unix_socket = "0.5"
lazy_static = "1.2"
atomic-option = "0.1"
bit-set = "0.5"

[dev-dependencies]
tempfile = "2.1.4"
